Replace wallets tab with accounts
- Move sign message activity to settings/security tools

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -355,6 +355,7 @@
     <string name="resume_account_discovery_desc">The restoration process to discover your accounts was interrupted in the last sync.\n\nUnlock the wallet to resume the process.</string>
     <string name="unlock">Unlock</string>
     <string name="wallets">Wallets</string>
+    <string name="accounts">Accounts</string>
     <string name="add_new_account">Add new account</string>
     <string name="key_count">%1$d external, %2$d internal, %3$d imported</string>
     <string name="keys">Keys</string>
