--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -320,7 +320,7 @@
     <string name="connect">Połącz</string>
     <string name="show_details">Wyświetl szczegóły</string>
     <string name="hide_details">Ukryj szczegóły</string>
-    <string name="block_header_fetched">Pobrano nagłówek bloku</string>
+    <string name="cfilters_fetched">Pobrano nagłówek bloku</string>
     <string name="step_1_3" tools:ignore="TypographyFractions">Krok 1/3</string>
     <string name="step_2_3">Krok 2/3</string>
     <string name="step_2_2">Krok 2/2</string>
@@ -332,7 +332,7 @@
     <string name="syncing_progress">Postęp synchronizacji</string>
     <string name="percentage">%1$d%%</string>
     <string name="syncing_state">Synchronizacja…</string>
-    <string name="block_header_fetched_count">%1$d z %2$d</string>
+    <string name="cfilters_fetched_count">%1$d z %2$d</string>
     <string name="blocks_left">Pozostało %1$d bloków</string>
     <string name="synced">Synchronizacja zakończona</string>
 
