--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -322,7 +322,7 @@
     <string name="connect">连接</string>
     <string name="show_details">查看详情</string>
     <string name="hide_details">隐藏详情</string>
-    <string name="block_header_fetched">区块头已获取</string>
+    <string name="cfilters_fetched">区块头已获取</string>
     <string name="step_1_3" tools:ignore="TypographyFractions">步骤 1/3</string>
     <string name="step_2_3">步骤 2/3</string>
     <string name="step_2_2">步骤 2/2</string>
@@ -334,7 +334,7 @@
     <string name="syncing_progress">同步进度</string>
     <string name="percentage">%1$d%%</string>
     <string name="syncing_state">同步中…</string>
-    <string name="block_header_fetched_count">%1$d of %2$d</string>
+    <string name="cfilters_fetched_count">%1$d of %2$d</string>
     <string name="blocks_left">%1$d区块剩余</string>
     <string name="synced">已同步</string>
 
