--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -326,11 +326,9 @@
     <string name="connect">Connect</string>
     <string name="show_details">Show details</string>
     <string name="hide_details">Hide Details</string>
-    <string name="block_header_fetched">Block header fetched</string>
-    <string name="step_1_3" tools:ignore="TypographyFractions">Step 1/3</string>
-    <string name="step_2_3">Step 2/3</string>
+    <string name="cfilters_fetched">CFilters fetched</string>
+    <string name="step_1_2" tools:ignore="TypographyFractions">Step 1/2</string>
     <string name="step_2_2">Step 2/2</string>
-    <string name="step_3_3">Step 3/3</string>
     <string name="fetching_block_headers"><![CDATA[Fetching block headers <font color="#8997a5">&centerdot;</font> %1$d%%]]></string>
     <string name="scanning_block_headers"><![CDATA[Scanning block headers <font color="#8997a5">&centerdot;</font> %1$d%%]]></string>
     <string name="rescanning_blocks"><![CDATA[Rescanning blocks <font color="#8997a5">&centerdot;</font> %1$d%%]]></string>
@@ -338,7 +336,7 @@
     <string name="syncing_progress">Syncing progress</string>
     <string name="percentage">%1$d%%</string>
     <string name="syncing_state">Syncing…</string>
-    <string name="block_header_fetched_count">%1$d of %2$d</string>
+    <string name="cfilters_fetched_count">%1$d of %2$d</string>
     <string name="blocks_left">%1$d blocks left</string>
     <string name="synced">Synced</string>
 
@@ -511,7 +509,6 @@
     <string name="spending_passphrase_changed">Spending PIN/password changed</string>
     <string name="wallets_log">Wallets log</string>
     <string name="write_down_seed_phrase">Write down seed phrase</string>
-    <string name="step_1_2" tools:ignore="TypographyFractions">Step 1/2</string>
     <string name="your_33_word_seed_phrase">Your 33-word seed phrase</string>
     <string name="i_have_wrote_down_all_33_words">I have written down all 33 words</string>
     <string name="security_tools">Security Tools</string>
